--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -64,10 +64,11 @@ div#header h1{
 	font-size: 32px;
 }
 div#content{
-	padding: 0px 30px;
-	background-color: #c0c0c0;
+	
+	/* background-image : url("../img/home/s.jpg"); */
 	margin-bottom: 30px;
 	min-height: 400px;
+	
 	 
 		
 }
@@ -131,3 +132,29 @@ div#footer{
 	
 	.he-50{height:50px}
 	.height-500px{height:500px} 
+#deleteForm{
+	style="border:1px solid black"
+}
+
+#moveLoginForm{
+	background-color: #99ccff;
+    color: white;
+    font-size : 17px;
+    text-align: center;
+    display: inline-block;
+    
+}
+
+#joinLoginForm{
+	background-color: #99ccff;
+    color: white;
+    font-size : 17px;
+    text-align: center;
+    display: inline-block;
+    
+}
+.bgcolorisYellow{background-color: #ffff00}
+#contentBoxTab{
+	margin: auto;
+	
+}
