--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -162,3 +162,11 @@ div#footer{
 .height22px{
 	height:22px;
 }
+.pageBox{
+		list-style: none;
+		padding: 0;
+		margin: 0;
+}
+.pageBox li{
+	display:inline;
+}
